# glacierbento

./: README.md  pyproject.toml
docs/source/: conf.py  index.rst
glacierbento/: __init__.py  core.py
glacierbento/components/: __init__.py  component.py  dispersed_layer.py  distributed_drainage_system.py  frozen_fringe.py  shallow_ice_approximation.py  simple_glacial_eroder.py  tvd_advection.py
glacierbento/models/: model.py
glacierbento/utils/: __init__.py  core.py  matrix_assembler.py  plotting.py  static_grid.py
tests/components/: test_dispersed_layer.py  test_distributed_drainage_system.py  test_frozen_fringe.py  test_shallow_ice_approximation.py  test_simple_glacial_eroder.py  test_tvd_advection.py
tests/integration/: glads_case.py
tests/utils/: test_matrix_assembler.py  test_static_grid.py
