[tool.poetry]
name = "glacierbento"
version = "0.1.0"
description = ""
authors = ["Ethan Pierce <ethan.pierce@colorado.edu>"]
license = "GNU GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
landlab = "^2.8.0"
jax = "^0.4.28"
equinox = "^0.11.4"
matplotlib = "^3.9.0"
lineax = "^0.0.5"
optimistix = "^0.0.7"
optax = "^0.2.2"
numpy = "^1.26.4"
xarray = "^2024.5.0"
geopandas = "^0.14.4"
rioxarray = "^0.15.5"
shapely = "^2.0.4"
scipy = "^1.13.1"
rasterio = "^1.3.10"
pytest = "^8.2.1"
diffrax = "^0.5.1"
black = "^24.4.2"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
